# Sorting-algorithms

./: CMakeLists.txt  Sorting-algorithms.pro  main.c
